# hypeshed

./: README.md  pyproject.toml
src/hypeshed/: __init__.py  common.py
src/hypeshed/trakt/: __init__.py  common.py  headers.pyi  users.pyi
