[tool.poetry]
name = "hypeshed"
version = "0.0.1"
description = "A typestub package that defines types for public APIs"
authors = ["Bence Nagy <bence@underyx.me>"]
license = "MIT"
packages = [
	{ include = "hypeshed", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
